mutate/add-image-pull-secret/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-image-pull-pod
  namespace: test-image-pull-secret-mutate
spec:
  containers:
  - image: corp.reg.com/test-verify-image:signed
    name: test-secret
